[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "contest-builder"
version = "0.0.14"
description = "Competetive Programming Management Tool"
readme = "README.md"
authors = [{ name = "shamir0xe", email = "shamir0xe@gmail.com" }]
license = { file = "LICENSE" }
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
keywords = ["competetive", "programming", "CP", "manager", "compile tool", "codeforces"]
dependencies = [
    "pylib-0xe == 0.1.3"
]
requires-python = ">=3.12.3"

[project.optional-dependencies]
dev = ["pytest", "pyfakefs", "pytest-mock"]

[project.urls]
Homepage = "https://github.com/shamir0xe/contest-builder"

[project.scripts]
contest-builder = "contest_builder.cli:app"

[tool.setuptools]
include-package-data = true
